Bug 1484855: Match the 'is rendered' definition from the spec in innerText. r=smaug

This matches other implementations and the spec for fallback content like:

  <canvas><div>abc

(calling div.innerText).

We're treating the <div> as 'rendered' because it's not in a display: none
subtree, but that's not ok, since it is in fact not rendered.

This was added in bug 1226293, and Boris suggested this change, but roc opposed
because it'd be hard to spec properly in comment 15. Looks like the HTML spec
ended up merging roc's innerText spec, and now it's spec'd in terms of 'being
rendered'.

I think IsOrHasAncestorWithDisplayNone just doesn't work in any reasonable way
for stuff out of the flat tree. Thus I think this change is the right thing.

The canvas test fails because of bug 1485076.

Differential Revision: https://phabricator.services.mozilla.com/D3887